# climatopic_xarray

./: .gitignore  README.md  pyproject.toml
src/: _version.py
src/climatopic_xarray/: __init__.py  bounds.py  climatology.py  exceptions.py  frequencies.py  typing.py  utilities.py
src/climatopic_xarray/testing/strategies/: _offset_aliases.py  frequencies.py
tests/: test_bounds.py  test_frequencies.py  test_utilities.py
